# personal-claude-setup

./: .gitignore  CLAUDE.md  README.md
.claude/: .credentials.json  AGENT-NAME-MAPPING.md  PERSISTENT-WHATSAPP-NOTIFICATIONS.md  WHATSAPP-NOTIFICATION-SYSTEM.md  settings.local.json  skill-rules.json
.claude/agents/: AGENT-CATALOG.md  BEHAVIORAL-TRAITS-BATCH-2-FINAL.md  sol-discord-bot.md  (+4 more)
.hermetic/: ACTIVATION-INSTRUCTIONS.md  ADVANCED-FEATURES.md  ALQVIMIA-INTEGRATION.md  AUTOMATION-INSTALL-GUIDE.md  AUTOMATION-SETUP-COMPLETE.md  BUILD-COMPLETE.md  BUILD-SESSION-COMPLETE.md  CONFLICT-RESOLUTION.md  CREATING-AGENTS-AND-SKILLS.md  CURRENT-STATUS.md  ECONOMIC-REALITY.md  EMBEDDING-COMPLETE.md  IDENTITY.md  INTEGRATION-COMPLETE.md  INTEGRATION-TOOLING-COMPLETE.md  LIFE-ORGANIZATION-SYSTEM.md  LIVING-MACHINE-COMPLETE.md  MCP-API-REQUIREMENTS.md  MCP-CLAUDE-CODE-INSTALLED.md  MCP-DIAGRAM-SERVERS-INSTALLED.md  OPTIMIZATION-REPORT-2025-10-30.md  PRACTICAL-ADDITIONS-SUMMARY.md  QUICK-START.md  README.md  RETROSPECTIVE-TEMPLATE.md  RIGHT-BRAIN-EVOLUTION-EXECUTION-SUMMARY.md  SESSION-COMPLETE.md  SYSTEM-EXPANSION-2025.md  SYSTEM-MAP.md  TELEGRAM-CONFIGURED.md  TELEGRAM-SETUP-GUIDE.md  VISUAL-DIAGRAM-MCP-GUIDE.md  WEEK-1-COMPLETE.md  WORKFLOW-EXPANSION-COMPLETE.md  backup.sh  corrected-9-realms-mapping.md  deep-dive-9-realms.md  manifesto.md  stone-to-realm-mapping.md  the-angelic-gauntlet.md  (+3 more)
.mcp/: NEW_MCPS_SETUP.md  README.md  STARTUP_CHECKLIST.md
.mcp/servers/hermetic-env-manager/: pyproject.toml
.mcp/servers/hermetic-env-manager/hermetic_env_manager/: __init__.py
(+478 files in other folders)
